rozdzial 2 sposoby integracji

--- a/1_introduction/introduction.tex
+++ b/1_introduction/introduction.tex
@@ -30,6 +30,13 @@
 
 \section{Definicja problemu } % section headings are printed smaller than chapter names
 % intro
+Integracja to łączenie mniejszych elementów ze sobą w celu stworzenia większego, spójnego, poprawnie działającego elementu. W informatyce integracja dotyczy głównie całych systemów. Czasami integracja nie kończy się tylko na łączeniu funkcjonalności ale także na dodawaniu nowych, jest to spowodowane tym, że system mający wiele komponentów mających różne zastosowania ma dzięki temu dużo większe możliwości i możę uzyskać funkcjonalność jakiej jego składowe nie byłyby w stanie uzyskać samodzielnie. Integracja systemów jest zadaniem bardzo trudnym, mającym charakter przekrojowy, wymagającyn wiedzy z wielu dziedzin takich jak:
+ \begin{itemize}
+	\item sieci komputerowe
+	\item programowanie
+	\item zarządzanie procesami biznesowymi
+	\item znajomość narzędzi wspierających integrację
+\end{itemize} 
 Komputerowe przetwarzanie mowy jest w ostatnim czasie szybko rozwijającą się dziedziną w przemyśle informatycznym. Wykorzystuje się je w wielu różnych dziedzinach zarówno związanych z rozrywką ( rozmainte gry polegające na jak najwierniejszym zaśpiewaniu podanego utworu), z życiem codziennym (Apple Siri czyli wirtualny asystent) jak i z pracą(różne systemy telefoniczne działające bez udziału człowieka). W wielu sytuacjach wykorzystanie komputerowo przetwarzanj mowy jest niezastąpione.\\
 Podobnie sytuacja wygląda z wykorzystaniem architektury SOA. Jest to jedno z najważniejszych osiągnieć informatycznych ostatnich lat. Podejście to zdecydowanie dominuje w obecnie projektowanych architekturach. Jednym z głowych powodów takiego stanu rzeczy jest uproszczenie modelu współczesnych dużych aplikacji. Umożliwia ono podzielenie systemu na serwisy które są niezależnymi, samodzielnymi, łatwymi w zarządzaniu, posiadającymi jasno i jednoznacznie zdefiniowane interfejsy encjami, które można wykorzystać w różnej kolejności w celu otrzymania różnych efektów. \\
 Celem tej pracy jest zbadanie możliwości wykorzystania nowoczesnej i prężnie rozwijającej się architektury do stworzenia gotowego systemy ułatwiającego i ujednolicającego proces tworzenia aplikacji przetwarzających mowę.
